# StatePatternInC

./: CMakeLists.txt  DigitalStopWatch.c  StartedState.c  StartedState.h  StoppedState.c  StoppedState.h  WatchState.c  WatchState.h  log.h  main.c
digital_watch/: DigitalStopWatch.c  DigitalStopWatch.h  StartedState.c  StoppedState.c  WatchState.c
